  with AF_DATE_STRING flag and the normal atkTimeAttribute. [Peter]
* atk_var_dump now uses var_dump internally so that references 
  are displayed properly. [Peter]
* atkNode::editArray: fallback to postvars is only done if a field really 
  is not set in the defaults record. [Peter]
* Fixed typo in test/class.atktestsuite.inc (bug #806) [Yury, Patrick]
- Removed old treeicon code from atkTreeNode. [Guido]
- Temporarily removed the 'generate title row' checkbox in atkExportHandler as
  it isn't yet implemented. [Guido]
- Removed default theme's action_view.tpl as it basically is no different
  than the default action.tpl. [Ivo]
- Removed unused summary string ($total) from atkNavigator. [Guido]
- Removed dirty hack from atkManyToOneRelation for the return $value of
  the select handler (select link) or add handler (add link). This hack
  still exists for the classic AF_LARGE mode. [Dennis, Peter]
- Removed atksecure from colorpicker.inc. [Lineke]
- Removed unneeded function call from newNode function. [Maurice]
- Removed unneeded global $vars from atkModule::newNode and
  atkModule::nodeOverloaders. [Maurice]
- Removed unused code in atkDataDecode function. [Lineke]
- Deprecated atkWysiwygAttribute (in favor of atkFckAttribute). [Ivo]
- Deprecated "mysql41" db driver. (use the "mysqli" driver instead). [Peter]


Changed in ATK 5.6
------------------
+ Added phpmail extension, now you can easily create html mails even with
  attachments through an mail object. [Dennis-Jan]
+ Changed atkFckAttribute's HTML based resourcemanager into a PHP based
  version to support themes [Wim]
+ Added ajax powered smart search functionality for performing arbitraty
  searches on any node. [Peter]
+ Added atkMessageQueue class for adding user notification messages. [Patrick]
+ Added atkMlWrapper for turning any attribute into an internationalisation
  enabled attribute. [Ivo]
+ Added atkCalculatorAttribute for adding columns with calculated values.
  [Ivo]